add some styling and make responsive

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
 	<header>
-		<img src="">
-		<h1>WWW.SATTAMAHARAJ.IN<b>(YOGI MAHARAJ)</b></h1>
+		<h1>WWW.SATTAMAHARAJ.IN<br><b>(YOGI MAHARAJ)</b></h1>
 		<img src="">
 		<p>गली दिसावर 100% पास गेम । जोड़ी और हरूफ । जोड़ी के साथ हरूफ फ्री में मिलेगा । जो लोग लॉस में है जिन्हें अपना लॉस कवर करवाना है और जो ईमानदार है वो ही गेम ले । फीस मात्र 3000 रूपए गेम पास के बाद । जो लोग एडवांस लेते हे वो FRAUD होते है ध्यान रखना दोस्तों ।<br>
 			<b>Yogi Maharaj<br>(Whatsapp no: 8791333013)</b> </p>
@@ -19,7 +18,7 @@
 			<span>DELHI-DARBAR</span>
 			<span class="number">80</span>
 		</div>
-		<div class="result">
+		<div class="reverseresult">
 			<span>GAZIABAD</span>
 			<span class="number">80</span>
 		</div>
@@ -27,7 +26,7 @@
 			<span>GALI</span>
 			<span class="number">80</span>
 		</div>
-		<div class="result">
+		<div class="reverseresult">
 			<span>DISAWAR</span>
 			<span class="number">80</span>
 		</div>
@@ -82,24 +81,224 @@
 					<td>75</td>
 					<td>89</td>
 				</tr>
+				<tr>
+					<td>05-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>06-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>07-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>08-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>09-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>10-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>11-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>12-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>13-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>14-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>15-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>16-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>17-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>18-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>20-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>21-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>22-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>23-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>24-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>25-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>26-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>27-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>28-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>29-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>30-06-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
 			</tbody>
 		</table>
 	</div>
 	
 	<div class="pastresults">
 		<ol>
-			<li><a herf="">Febuary2017</a></li>
-			<li><a herf="">March2017</a></li>
-			<li><a herf="">Aprail2017</a></li>
-			<li><a herf="">May2017</a></li>
+			<li><a herf="#">Febuary2017</a></li>
+			<li><a herf="#">March2017</a></li>
+			<li><a herf="#">Aprail2017</a></li>
+			<li><a herf="#">May2017</a></li>
 		</ol>
 	</div>
 	<footer>
 		<p><i>© 2017 SattaMaharaj(YOGI MAHARAJ)</i></p>
 		<div class="vermaji">
-		<p>फरीदाबाद ग़ज़िआबाद की जोड़ी लेने के लिए मेसेज करे । फुल कन्फर्म गेम मिलेगा हमारे EXPERT TOP GUESSER से । फीस मात्र 2500 रूपए । गेम पास के बाद फीस दे और ईमानदारी से जुड़ जाये । <br>
-		<b>Expert Verma Ji(Whatsapp no: 7906667878)</b></p>
-	</div>
+			<p>फरीदाबाद ग़ज़िआबाद की जोड़ी लेने के लिए मेसेज करे । फुल कन्फर्म गेम मिलेगा हमारे EXPERT TOP GUESSER से । फीस मात्र 2500 रूपए । गेम पास के बाद फीस दे और ईमानदारी से जुड़ जाये । <br>
+			<b>Expert Verma Ji(Whatsapp no: 7906667878)</b></p>
+		</div>
 	</footer>
 </body>
 </html>
