add img and style

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Satta Record 2016-2017 Records Chart Gali Desawer Today Result Satta Maharaj</title>
+	<title>Satta Record 2016-2017 Records Chart Gali Desawer Today Result Satta Maharaj Yogi Maharaj</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<header>
-		<h1>WWW.SATTAMAHARAJ.IN<br><b>(YOGI MAHARAJ)</b></h1>
+		<img src="hanuman-gif.png" alt="Hunam ji" width=50em; height=50em;>
+		<h1>WWW.SATTAMAHARAJ.IN<br><b>YOGI MAHARAJ</b></h1>
 		<p>गली दिसावर 100% पास गेम । जोड़ी और हरूफ । जोड़ी के साथ हरूफ फ्री में मिलेगा । जो लोग लॉस में है जिन्हें अपना लॉस कवर करवाना है और जो ईमानदार है वो ही गेम ले । फीस मात्र 3000 रूपए गेम पास के बाद । जो लोग एडवांस लेते हे वो FRAUD होते है ध्यान रखना दोस्तों ।<br>
 			<b>Yogi Maharaj<br>(Whatsapp no: 8791333013)</b></p>
 	</header>
@@ -296,7 +297,7 @@
 		<p><i>© 2017 SattaMaharaj(YOGI MAHARAJ)</i></p>
 		<div class="vermaji">
 			<p>फरीदाबाद ग़ज़िआबाद की जोड़ी लेने के लिए मेसेज करे । फुल कन्फर्म गेम मिलेगा हमारे EXPERT TOP GUESSER से । फीस मात्र 2500 रूपए । गेम पास के बाद फीस दे और ईमानदारी से जुड़ जाये । <br>
-			<b>Expert Verma Ji(Whatsapp no: 7906667878)</b></p>
+			<b >Expert Verma Ji</br>(Whatsapp no: 7906667878)</b></p>
 		</div>
 	</footer>
 </body>
