--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">67</span>
+			<span class="number">**</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">67</span>
+			<span class="number">**</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">66</span>
+			<span class="number">**</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">80</span>
+			<span class="number">**</span>
 		</div>
 	</div>
 
