--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">**</span>
+			<span class="number">21</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
