--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">21</span>
+			<span class="number">**</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -29,7 +29,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">79</span>
+			<span class="number">72</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
