--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		<img src="hanuman-gif.png" alt="Hunam ji" width=50em; height=50em;>
-		<h1>WWW.SATTAMAHARAJ.IN<br><b>YOGI MAHARAJ</b></h1>
+		<h1>WWW.SATTAMAHARAJ.IN<br><b>SATTA-MAHARAJ</b></h1>
 		<p>गली दिसावर 100% पास गेम । जोड़ी और हरूफ । जोड़ी के साथ हरूफ फ्री में मिलेगा । जो लोग लॉस में है जिन्हें अपना लॉस कवर करवाना है और जो ईमानदार है वो ही गेम ले । फीस मात्र 3000 रूपए गेम पास के बाद । जो लोग एडवांस लेते हे वो FRAUD होते है ध्यान रखना दोस्तों ।<br>
 			<b>Yogi Maharaj<br>(Whatsapp no: 8791333013)</b></p>
 	</header>
