--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">**</span>
+			<span class="number">60</span>
 		</div>
 	</div>
 
@@ -192,7 +192,7 @@
 					<td></td>
 					<td></td>
 					<td>72</td>
-					<td></td>
+					<td>60</td>
 				</tr>
 				<tr>
 					<td>20-07-17</td>
