--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">**</span>
+			<span class="number">74</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -189,7 +189,7 @@
 				<tr>
 					<td>18-07-17</td>
 					<td></td>
-					<td></td>
+					<td>74</td>
 					<td></td>
 					<td>72</td>
 					<td>60</td>
