--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">**</span>
+			<span class="number">82</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -190,7 +190,7 @@
 					<td>18-07-17</td>
 					<td></td>
 					<td>74</td>
-					<td></td>
+					<td>82</td>
 					<td>72</td>
 					<td>60</td>
 				</tr>
