--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">**</span>
+			<span class="number">/span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">74</span>
+			<span class="number">**</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">82</span>
+			<span class="number">**</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">60</span>
+			<span class="number">**</span>
 		</div>
 	</div>
 
@@ -188,7 +188,7 @@
 				</tr>
 				<tr>
 					<td>18-07-17</td>
-					<td></td>
+					<td>83</td>
 					<td>74</td>
 					<td>82</td>
 					<td>72</td>
