--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">**</span>
+			<span class="number">48</span>
 		</div>
 	</div>
 
@@ -200,7 +200,7 @@
 					<td></td>
 					<td></td>
 					<td>31</td>
-					<td></td>
+					<td>48</td>
 				</tr>
 				<tr>
 					<td>21-07-17</td>
