--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">**</span>
+			<span class="number">81</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -197,7 +197,7 @@
 				<tr>
 					<td>20-07-17</td>
 					<td></td>
-					<td></td>
+					<td>81</td>
 					<td></td>
 					<td>31</td>
 					<td>48</td>
