--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Satta Record 2016-2017 Records Chart Gali Desawer Today Result Satta Maharaj Yogi Maharaj</title>
+	<title>Satta Record 2017 Records Chart Gali Desawer Today Result Satta Maharaj Yogi Maharaj</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
@@ -195,12 +195,20 @@
 					<td>60</td>
 				</tr>
 				<tr>
-					<td>20-07-17</td>
+					<td>19-7-17</td>
 					<td></td>
 					<td>81</td>
 					<td></td>
 					<td>31</td>
 					<td>48</td>
+				</tr>
+				<tr>
+					<td>20-07-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
 				</tr>
 				<tr>
 					<td>21-07-17</td>
@@ -220,14 +228,6 @@
 				</tr>
 				<tr>
 					<td>23-07-17</td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-				</tr>
-				<tr>
-					<td>24-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
