--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">81</span>
+			<span class="number">**</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -29,7 +29,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">31</span>
+			<span class="number">09</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
@@ -195,7 +195,7 @@
 					<td>60</td>
 				</tr>
 				<tr>
-					<td>19-7-17</td>
+					<td>19-07-17</td>
 					<td>39</td>
 					<td>81</td>
 					<td>97</td>
