--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">48</span>
+			<span class="number">**</span>
 		</div>
 	</div>
 
