--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">**</span>
+			<span class="number">02</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">**</span>
+			<span class="number">27</span>
 		</div>
 	</div>
 
@@ -229,10 +229,10 @@
 				<tr>
 					<td>23-07-17</td>
 					<td></td>
-					<td></td>
+					<td>02</td>
 					<td></td>
 					<td>09</td>
-					<td></td>
+					<td>27</td>
 				</tr>
 				<tr>
 					<td>25-07-17</td>
