--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">**</span>
+			<span class="number">41</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
@@ -228,7 +228,7 @@
 				</tr>
 				<tr>
 					<td>23-07-17</td>
-					<td></td>
+					<td>41</td>
 					<td>02</td>
 					<td></td>
 					<td>09</td>
