--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">**</span>
+			<span class="number">26</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -230,7 +230,7 @@
 					<td>23-07-17</td>
 					<td>41</td>
 					<td>02</td>
-					<td></td>
+					<td>26</td>
 					<td>09</td>
 					<td>27</td>
 				</tr>
