--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">41</span>
+			<span class="number">--</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">02</span>
+			<span class="number">--</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">26</span>
+			<span class="number">--</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">09</span>
+			<span class="number">97</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">27</span>
+			<span class="number">--</span>
 		</div>
 	</div>
 
@@ -223,7 +223,7 @@
 					<td>59</td>
 					<td>62</td>
 					<td>27</td>
-					<td>30</td>
+					<td>31</td>
 					<td>100</td>
 				</tr>
 				<tr>
@@ -233,6 +233,14 @@
 					<td>26</td>
 					<td>09</td>
 					<td>27</td>
+				</tr>
+				<tr>
+					<td>24-07-17</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td>97</td>
+					<td></td>
 				</tr>
 				<tr>
 					<td>25-07-17</td>
@@ -252,14 +260,6 @@
 				</tr>
 				<tr>
 					<td>27-07-17</td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-				</tr>
-				<tr>
-					<td>28-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
