--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">97</span>
+			<span class="number">**</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
@@ -52,51 +52,51 @@
 			<tbody>
 				<tr>
 					<td>01-07-17</td>
-					<td>31</td>
-					<td>43</td>
-					<td>67</td>
+					<td></td>
+					<td></td>
+					<td></td>
 					<td>**</td>
-					<td>28</td>
+					<td></td>
 				</tr>
 				<tr>
 					<td>02-07-17</td>
-					<td>72</td>
-					<td>30</td>
-					<td>00</td>
-					<td>61</td>
-					<td>28</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
 				</tr>
 				<tr>
 					<td>03-07-17</td>
-					<td>14</td>
-					<td>36</td>
-					<td>75</td>
-					<td>78</td>
-					<td>89</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
 				</tr>
 				<tr>
 					<td>04-07-17</td>
-					<td>57</td>
-					<td>85</td>
-					<td>90</td>
-					<td>68</td>
-					<td>18</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
 				</tr>
 				<tr>
 					<td>05-07-17</td>
-					<td>06</td>
-					<td>58</td>
-					<td>97</td>
-					<td>59</td>
-					<td>68</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
 				</tr>
 				<tr>
 					<td>06-07-17</td>
-					<td>70</td>
-					<td>92</td>
-					<td>64</td>
-					<td>50</td>
-					<td>68</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
 				</tr>
 				<tr>
 					<td>07-07-17</td>
