--- a/lastmonth.html
+++ b/lastmonth.html
@@ -51,7 +51,7 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td>01-08-17</td>
+					<td>01-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -59,7 +59,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>02-08-17</td>
+					<td>02-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -67,7 +67,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>03-08-17</td>
+					<td>03-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -75,7 +75,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>04-08-17</td>
+					<td>04-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -83,7 +83,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>05-08-17</td>
+					<td>05-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -91,7 +91,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>06-08-17</td>
+					<td>06-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -99,7 +99,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>08-08-17</td>
+					<td>07-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -107,7 +107,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>08-08-17</td>
+					<td>08-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -115,7 +115,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>09-08-17</td>
+					<td>09-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -123,7 +123,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>10-08-17</td>
+					<td>10-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -131,7 +131,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>11-08-17</td>
+					<td>11-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -139,7 +139,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>12-08-17</td>
+					<td>12-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -147,7 +147,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>13-08-17</td>
+					<td>13-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -155,7 +155,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>14-08-17</td>
+					<td>14-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -163,7 +163,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>15-08-17</td>
+					<td>15-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -171,7 +171,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>16-08-17</td>
+					<td>16-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -179,7 +179,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>17-08-17</td>
+					<td>17-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -187,7 +187,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>18-08-17</td>
+					<td>18-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -195,7 +195,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>19-08-17</td>
+					<td>19-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -203,7 +203,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>20-08-17</td>
+					<td>20-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -211,7 +211,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>21-08-17</td>
+					<td>21-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -219,7 +219,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>22-08-17</td>
+					<td>22-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -227,7 +227,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>23-08-17</td>
+					<td>23-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -235,7 +235,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>24-08-17</td>
+					<td>24-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -243,7 +243,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>25-08-17</td>
+					<td>25-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -251,7 +251,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>26-08-17</td>
+					<td>26-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -259,7 +259,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>27-08-17</td>
+					<td>27-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -267,7 +267,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>29-08-17</td>
+					<td>29-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -275,7 +275,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>30-08-17</td>
+					<td>30-07-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -288,7 +288,7 @@
 
 	<div class="pastresults">
 		<ol>
-			<li><a herf="/lastmonth.html">Last Month Record</a></li>
+			<li><a herf="/index.html">Latest record</a></li>
 
 		</ol>
 	</div>
