--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
 	<div class="pastresults">
 		<ol>
-			<li><a herf="/lastmonth.html">Last Month Record</a></li>
+			<li><a href="lastmonth.html">Last Month Record</a></li>
 
 		</ol>
 	</div>
