--- a/lastmonth.html
+++ b/lastmonth.html
@@ -288,7 +288,7 @@
 
 	<div class="pastresults">
 		<ol>
-			<li><a herf="/index.html">Latest record</a></li>
+			<li><a href="index.html">Latest record</a></li>
 
 		</ol>
 	</div>
