--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">--</span>
+			<span class="number">20</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">--</span>
+			<span class="number">20</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">--</span>
+			<span class="number">waiting</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">**</span>
+			<span class="number">waiting</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">--</span>
+			<span class="number">73</span>
 		</div>
 	</div>
 
@@ -44,9 +44,9 @@
 					<th>Date</th>
 					<th>DELHI-DARBAR</th>
 					<th>GAZIABAD</th>
-					<th>GALI</th>
-					<th>DISAWAR</th>
 					<th>FARIDABAD</th>
+					<th>DISAWAR</th>
+					<th>GALI</th>
 				</tr>
 			</thead>
 			<tbody>
