--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">waiting</span>
+			<span class="number">99</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
