--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">20</span>
+			<span class="number">wait</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">20</span>
+			<span class="number">wait</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">99</span>
+			<span class="number">wait</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">waiting</span>
+			<span class="number">64</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">73</span>
+			<span class="number">wait</span>
 		</div>
 	</div>
 
@@ -52,7 +52,7 @@
 			<tbody>
 				<tr>
 					<td>01-08-17</td>
-					<td></td>
+					<td>50</td>
 					<td></td>
 					<td></td>
 					<td>**</td>
@@ -60,7 +60,7 @@
 				</tr>
 				<tr>
 					<td>02-08-17</td>
-					<td></td>
+					<td>68</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -68,7 +68,7 @@
 				</tr>
 				<tr>
 					<td>03-08-17</td>
-					<td></td>
+					<td>75</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -76,7 +76,7 @@
 				</tr>
 				<tr>
 					<td>04-08-17</td>
-					<td></td>
+					<td>06</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -84,7 +84,7 @@
 				</tr>
 				<tr>
 					<td>05-08-17</td>
-					<td></td>
+					<td>71</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -92,15 +92,7 @@
 				</tr>
 				<tr>
 					<td>06-08-17</td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-				</tr>
-				<tr>
-					<td>08-08-17</td>
-					<td></td>
+					<td>10</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -108,7 +100,15 @@
 				</tr>
 				<tr>
 					<td>08-08-17</td>
+					<td>07</td>
 					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>08-08-17</td>
+					<td>01</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -116,7 +116,7 @@
 				</tr>
 				<tr>
 					<td>09-08-17</td>
-					<td></td>
+					<td>12</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -124,7 +124,7 @@
 				</tr>
 				<tr>
 					<td>10-08-17</td>
-					<td></td>
+					<td>51</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -132,7 +132,7 @@
 				</tr>
 				<tr>
 					<td>11-08-17</td>
-					<td></td>
+					<td>51</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -140,7 +140,7 @@
 				</tr>
 				<tr>
 					<td>12-08-17</td>
-					<td></td>
+					<td>19</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -148,7 +148,7 @@
 				</tr>
 				<tr>
 					<td>13-08-17</td>
-					<td></td>
+					<td>20</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -156,7 +156,7 @@
 				</tr>
 				<tr>
 					<td>14-08-17</td>
-					<td></td>
+					<td>88</td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -164,7 +164,7 @@
 				</tr>
 				<tr>
 					<td>15-08-17</td>
-					<td></td>
+					<td>20</td>
 					<td></td>
 					<td></td>
 					<td></td>
