--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">wait</span>
+			<span class="number">40</span>
 		</div>
 	</div>
 
@@ -174,7 +174,7 @@
 					<td>16-08-17</td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>40</td>
 					<td>64</td>
 					<td></td>
 				</tr>
