--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">wait</span>
+			<span class="number">34</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -173,7 +173,7 @@
 				<tr>
 					<td>16-08-17</td>
 					<td></td>
-					<td></td>
+					<td>34</td>
 					<td>40</td>
 					<td>64</td>
 					<td></td>
