--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">wait</span>
+			<span class="number">30</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -176,7 +176,7 @@
 					<td>34</td>
 					<td>40</td>
 					<td>64</td>
-					<td></td>
+					<td>30</td>
 				</tr>
 				<tr>
 					<td>17-08-17</td>
