--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">12</span>
+			<span class="number">wait</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">34</span>
-		</div>
-		<div class="result">
-			<span>GALI</span>
-			<span class="number">30</span>
-		</div>
-		<div class="reverseresult">
-			<span>DISAWAR</span>
 			<span class="number">wait</span>
 		</div>
 		<div class="result">
+			<span>GALI</span>
+			<span class="number">wait</span>
+		</div>
+		<div class="reverseresult">
+			<span>DISAWAR</span>
+			<span class="number">36</span>
+		</div>
+		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">40</span>
+			<span class="number">wait</span>
 		</div>
 	</div>
 
@@ -183,7 +183,7 @@
 					<td></td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>36</td>
 					<td></td>
 				</tr>
 				<tr>
