--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">wait</span>
+			<span class="number">10</span>
 		</div>
 	</div>
 
@@ -182,7 +182,7 @@
 					<td>17-08-17</td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>10</td>
 					<td>36</td>
 					<td></td>
 				</tr>
