--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">wait</span>
+			<span class="number">08</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -181,7 +181,7 @@
 				<tr>
 					<td>17-08-17</td>
 					<td></td>
-					<td></td>
+					<td>08</td>
 					<td>10</td>
 					<td>36</td>
 					<td></td>
