--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">wait</span>
+			<span class="number">100</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
@@ -29,7 +29,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">36</span>
+			<span class="number">WAIT</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
@@ -180,7 +180,7 @@
 				</tr>
 				<tr>
 					<td>17-08-17</td>
-					<td></td>
+					<td>100</td>
 					<td>08</td>
 					<td>10</td>
 					<td>36</td>
