--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">wait</span>
+			<span class="number">14</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -184,7 +184,7 @@
 					<td>08</td>
 					<td>10</td>
 					<td>36</td>
-					<td></td>
+					<td>14</td>
 				</tr>
 				<tr>
 					<td>18-08-17</td>
