--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">WAIT</span>
+			<span class="number">86</span>
 		</div>
 	</div>
 
@@ -190,7 +190,7 @@
 					<td>18-08-17</td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>86</td>
 					<td>30</td>
 					<td></td>
 				</tr>
