--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">WAIT</span>
+			<span class="number">28</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
@@ -188,7 +188,7 @@
 				</tr>
 				<tr>
 					<td>18-08-17</td>
-					<td></td>
+					<td>28</td>
 					<td>95</td>
 					<td>86</td>
 					<td>30</td>
