--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">WAIT</span>
+			<span class="number">37</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -192,7 +192,7 @@
 					<td>95</td>
 					<td>86</td>
 					<td>30</td>
-					<td></td>
+					<td>37</td>
 				</tr>
 				<tr>
 					<td>19-08-17</td>
