--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">28</span>
+			<span class="number">ििनतज़ार करे</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
@@ -29,7 +29,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">WAIT</span>
+			<span class="number">54</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
@@ -199,7 +199,7 @@
 					<td></td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>54</td>
 					<td></td>
 				</tr>
 				<tr>
