--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">20</span>
+			<span class="number">WAITING...</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
@@ -204,18 +204,18 @@
 				</tr>
 				<tr>
 					<td>20-08-17</td>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td>49</td>
+					<td>81</td>
+					<td>81</td>
 					<td>20</td>
-					<td></td>
+					<td>21</td>
 				</tr>
 				<tr>
 					<td>21-08-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>83</td>
 					<td></td>
 				</tr>
 				<tr>
