--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">WAITING...</span>
+			<span class="number">8⃣3⃣</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
