--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">8⃣3⃣</span>
+			<span class="number">83</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">WAITING...</span>
+			<span class="number">70</span>
 		</div>
 	</div>
 
@@ -214,7 +214,7 @@
 					<td>21-08-17</td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>70</td>
 					<td>83</td>
 					<td></td>
 				</tr>
