--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">WAITING...</span>
+			<span class="number">40</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
@@ -212,7 +212,7 @@
 				</tr>
 				<tr>
 					<td>21-08-17</td>
-					<td></td>
+					<td>40</td>
 					<td>06</td>
 					<td>70</td>
 					<td>83</td>
