--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">WAITING..</span>
+			<span class="number">26</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -216,7 +216,7 @@
 					<td>06</td>
 					<td>70</td>
 					<td>83</td>
-					<td></td>
+					<td>26</td>
 				</tr>
 				<tr>
 					<td>22-08-17</td>
