--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">WAITING...</span>
+			<span class="number">85</span>
 		</div>
 	</div>
 
@@ -222,7 +222,7 @@
 					<td>22-08-17</td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>85</td>
 					<td>18</td>
 					<td></td>
 				</tr>
