--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">WAITING...</span>
+			<span class="number">23</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
@@ -220,8 +220,8 @@
 				</tr>
 				<tr>
 					<td>22-08-17</td>
-					<td></td>
-					<td></td>
+					<td>23</td>
+					<td>41</td>
 					<td>85</td>
 					<td>18</td>
 					<td></td>
