--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">WAITING...</span>
+			<span class="number">20</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -224,7 +224,7 @@
 					<td>41</td>
 					<td>85</td>
 					<td>18</td>
-					<td></td>
+					<td>20</td>
 				</tr>
 				<tr>
 					<td>23-08-17</td>
