--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">23</span>
+			<span class="number">WAITING..</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">41</span>
-		</div>
-		<div class="result">
-			<span>GALI</span>
-			<span class="number">38</span>
-		</div>
-		<div class="reverseresult">
-			<span>DISAWAR</span>
 			<span class="number">WAITING..</span>
 		</div>
 		<div class="result">
+			<span>GALI</span>
+			<span class="number">WAITING..</span>
+		</div>
+		<div class="reverseresult">
+			<span>DISAWAR</span>
+			<span class="number">26</span>
+		</div>
+		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">85</span>
+			<span class="number">WAITING..</span>
 		</div>
 	</div>
 
@@ -231,7 +231,7 @@
 					<td></td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>26</td>
 					<td></td>
 				</tr>
 				<tr>
