--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">WAITING..</span>
+			<span class="number">49</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">WAITING..</span>
+			<span class="number">07</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -228,8 +228,8 @@
 				</tr>
 				<tr>
 					<td>23-08-17</td>
-					<td></td>
-					<td></td>
+					<td>49</td>
+					<td>07</td>
 					<td>85</td>
 					<td>26</td>
 					<td></td>
