--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">WAITING..</span>
+			<span class="number">85</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -232,7 +232,7 @@
 					<td>07</td>
 					<td>85</td>
 					<td>26</td>
-					<td></td>
+					<td>85</td>
 				</tr>
 				<tr>
 					<td>24-08-17</td>
