--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">49</span>
+			<span class="number">WAITING..</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">07</span>
-		</div>
-		<div class="result">
-			<span>GALI</span>
-			<span class="number">85</span>
-		</div>
-		<div class="reverseresult">
-			<span>DISAWAR</span>
 			<span class="number">WAITING..</span>
 		</div>
 		<div class="result">
+			<span>GALI</span>
+			<span class="number">WAITING..</span>
+		</div>
+		<div class="reverseresult">
+			<span>DISAWAR</span>
+			<span class="number">65</span>
+		</div>
+		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">85</span>
+			<span class="number">WAITING..</span>
 		</div>
 	</div>
 
@@ -239,7 +239,7 @@
 					<td></td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>65</td>
 					<td></td>
 				</tr>
 				<tr>
