--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">WAITING..</span>
+			<span class="number">98</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">WAITING..</span>
+			<span class="number">21</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -236,8 +236,8 @@
 				</tr>
 				<tr>
 					<td>24-08-17</td>
-					<td></td>
-					<td></td>
+					<td>98</td>
+					<td>21</td>
 					<td>63</td>
 					<td>65</td>
 					<td></td>
