--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">WAITING..</span>
+			<span class="number">14</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -29,11 +29,11 @@
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">39</span>
+			<span class="number">WAITING</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">WAITING..</span>
+			<span class="number">53</span>
 		</div>
 	</div>
 
@@ -245,8 +245,8 @@
 				<tr>
 					<td>25-08-17</td>
 					<td></td>
-					<td></td>
-					<td></td>
+					<td>14</td>
+					<td>53</td>
 					<td>39</td>
 					<td></td>
 				</tr>
