--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">WAITING..</span>
+			<span class="number">13</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
