--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">13</span>
+			<span class="number">WAITING..</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">14</span>
+			<span class="number">WAITING..</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -29,11 +29,11 @@
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">WAITING</span>
+			<span class="number">02</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">53</span>
+			<span class="number">WAITING..</span>
 		</div>
 	</div>
 
@@ -248,14 +248,14 @@
 					<td>14</td>
 					<td>53</td>
 					<td>39</td>
-					<td></td>
+					<td>03</td>
 				</tr>
 				<tr>
 					<td>26-08-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>02</td>
 					<td></td>
 				</tr>
 				<tr>
