--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">WAITING..</span>
+			<span class="number">10</span>
+			
+			
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">WAITING..</span>
+			<span class="number">86</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">WAITING..</span>
+			<span class="number">04</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
