--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">02</span>
+			<span class="number">----</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
@@ -254,11 +254,11 @@
 				</tr>
 				<tr>
 					<td>26-08-17</td>
-					<td></td>
-					<td></td>
+					<td>10</td>
+					<td>86</td>
 					<td>63</td>
 					<td>02</td>
-					<td></td>
+					<td>04</td>
 				</tr>
 				<tr>
 					<td>27-08-17</td>
