--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">10</span>
+			<span class="number">---</span>
 			
 			
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">86</span>
+			<span class="number">---</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">04</span>
+			<span class="number">---</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -35,7 +35,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">63</span>
+			<span class="number">31</span>
 		</div>
 	</div>
 
@@ -264,8 +264,8 @@
 					<td>27-08-17</td>
 					<td></td>
 					<td></td>
-					<td></td>
-					<td></td>
+					<td>31</td>
+					<td>72</td>
 					<td></td>
 				</tr>
 				<tr>
