--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">---</span>
+			<span class="number">31</span>
 			
 			
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">---</span>
+			<span class="number">61</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -262,8 +262,8 @@
 				</tr>
 				<tr>
 					<td>27-08-17</td>
-					<td></td>
-					<td></td>
+					<td>31</td>
+					<td>61</td>
 					<td>31</td>
 					<td>72</td>
 					<td></td>
