--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">31</span>
+			<span class="number">---</span>
 			
 			
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">61</span>
+			<span class="number">08</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -35,7 +35,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">31</span>
+			<span class="number">39</span>
 		</div>
 	</div>
 
