--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">---</span>
+			<span class="number">17</span>
 			
 			
 		</div>
@@ -270,7 +270,7 @@
 				</tr>
 				<tr>
 					<td>28-08-17</td>
-					<td></td>
+					<td>17</td>
 					<td>08</td>
 					<td>39</td>
 					<td>68</td>
