--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">----</span>
+			<span class="number">94</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
