--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number"></span>
+			<span class="number">99</span>
 		</div>
 	</div>
 
@@ -200,7 +200,7 @@
 					<td>19-09-17</td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>99</td>
 					<td>70</td>
 					<td></td>
 				</tr>
