--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number"></span>
+			<span class="number">WAITING...</span>
 
 
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number"></span>
+			<span class="number">76</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">---</span>
+			<span class="number">WAITING...</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -199,7 +199,7 @@
 				<tr>
 					<td>19-09-17</td>
 					<td></td>
-					<td></td>
+					<td>76</td>
 					<td>99</td>
 					<td>70</td>
 					<td></td>
