--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">WAITING...</span>
+			<span class="number">49</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -210,7 +210,7 @@
 					<td>33</td>
 					<td>34</td>
 					<td>61</td>
-					<td></td>
+					<td>49</td>
 				</tr>
 				<tr>
 					<td>21-09-17</td>
