--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number"></span>
+			<span class="number">44</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -35,7 +35,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number"></span>
+			<span class="number">47</span>
 		</div>
 	</div>
 
@@ -215,8 +215,8 @@
 				<tr>
 					<td>21-09-17</td>
 					<td></td>
-					<td></td>
-					<td></td>
+					<td>44</td>
+					<td>47</td>
 					<td>62</td>
 					<td></td>
 				</tr>
