--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number"></span>
+			<span class="number">34</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -218,7 +218,7 @@
 					<td>44</td>
 					<td>47</td>
 					<td>62</td>
-					<td></td>
+					<td>34</td>
 				</tr>
 				<tr>
 					<td>22-09-17</td>
