--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number"></span>
+			<span class="number">30</span>
 
 
 		</div>
@@ -214,7 +214,7 @@
 				</tr>
 				<tr>
 					<td>21-09-17</td>
-					<td></td>
+					<td>30</td>
 					<td>44</td>
 					<td>47</td>
 					<td>62</td>
