--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">30</span>
+			<span class="number"></span>
 
 
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">44</span>
+			<span class="number"></span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">34</span>
+			<span class="number"></span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">62</span>
+			<span class="number">16</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">47</span>
+			<span class="number"></span>
 		</div>
 	</div>
 
@@ -225,7 +225,7 @@
 					<td></td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>16</td>
 					<td></td>
 			        </tr>
 				<tr>
