--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number"></span>
+			<span class="number">95</span>
 		</div>
 	</div>
 
@@ -222,7 +222,7 @@
 					<td>22-09-17</td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>95</td>
 					<td>16</td>
 					<td></td>
 			        </tr>
