--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number"></span>
+			<span class="number">63</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -221,7 +221,7 @@
 				<tr>
 					<td>22-09-17</td>
 					<td></td>
-					<td></td>
+					<td>63</td>
 					<td>95</td>
 					<td>16</td>
 					<td></td>
