--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number"></span>
+			<span class="number">04</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
@@ -220,7 +220,7 @@
 				</tr>
 				<tr>
 					<td>22-09-17</td>
-					<td></td>
+					<td>04</td>
 					<td>63</td>
 					<td>95</td>
 					<td>16</td>
