--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number"></span>
+			<span class="number">09</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -224,7 +224,7 @@
 					<td>63</td>
 					<td>95</td>
 					<td>16</td>
-					<td></td>
+					<td>09</td>
 			        </tr>
 				<tr>
 					<td>24-09-17</td>
