--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">04</span>
+			<span class="number"></span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">63</span>
+			<span class="number"></span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">09</span>
+			<span class="number"></span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">wait</span>
+			<span class="number">62</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">95</span>
+			<span class="number"></span>
 		</div>
 	</div>
 
@@ -227,11 +227,11 @@
 					<td>09</td>
 			        </tr>
 				<tr>
-					<td>24-09-17</td>
+					<td>23-09-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>62</td>
 					<td></td>
 				</tr>
 				<tr>
