--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number"></span>
+			<span class="number">41</span>
 		</div>
 	</div>
 
@@ -230,7 +230,7 @@
 					<td>23-09-17</td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>41</td>
 					<td>62</td>
 					<td></td>
 				</tr>
