--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number"></span>
+			<span class="number">63</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -232,7 +232,7 @@
 					<td>61</td>
 					<td>41</td>
 					<td>62</td>
-					<td></td>
+					<td>63</td>
 				</tr>
 				<tr>
 					<td>25-09-17</td>
