--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">49</span>
+			<span class="number"></span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">61</span>
-		</div>
-		<div class="result">
-			<span>GALI</span>
-			<span class="number">63</span>
-		</div>
-		<div class="reverseresult">
-			<span>DISAWAR</span>
 			<span class="number"></span>
 		</div>
 		<div class="result">
+			<span>GALI</span>
+			<span class="number"></span>
+		</div>
+		<div class="reverseresult">
+			<span>DISAWAR</span>
+			<span class="number">29</span>
+		</div>
+		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">41</span>
+			<span class="number"></span>
 		</div>
 	</div>
 
@@ -235,11 +235,11 @@
 					<td>63</td>
 				</tr>
 				<tr>
-					<td>25-09-17</td>
+					<td>24-09-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>29</td>
 					<td></td>
 				</tr>
 				<tr>
