--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<img src="hanuman-gif.png" alt="Hunam ji" width=50em; height=50em;>
 		<h1>योगी महाराज।<br><b>SATTA-MAHARAJ</b></h1>
 		<p>गली दिसावर 100% पास गेम । जोड़ी और हरूफ । जोड़ी के साथ हरूफ फ्री में मिलेगा । जो लोग लॉस में है जिन्हें अपना लॉस कवर करवाना है और जो ईमानदार है वो ही गेम ले । फीस मात्र 3000 रूपए गेम पास के बाद । जो लोग एडवांस लेते हे वो FRAUD होते है ध्यान रखना दोस्तों ।<br>
-			<b>Yogi Maharaj<br>(Whatsapp no: 8791333013)</b></p>
+			<b>Yogi Maharaj<br>(Whatsapp no: 7906667878)</b></p>
 	</header>
 	<div class="results">
 		<h2>TODAY RESULTS</h2>
@@ -29,7 +29,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">04</span>
+			<span class="number">76</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
@@ -288,7 +288,7 @@
 		<p><i>© 2017 SattaMaharaj(YOGI MAHARAJ)</i></p>
 		<div class="vermaji">
 			<p>फरीदाबाद ग़ज़िआबाद की जोड़ी लेने के लिए मेसेज करे । फुल कन्फर्म गेम मिलेगा हमारे EXPERT TOP GUESSER से । फीस मात्र 2500 रूपए । गेम पास के बाद फीस दे और ईमानदारी से जुड़ जाये । <br>
-			<b>Expert Verma Ji</br>(Whatsapp no: 7906667878)</b></p>
+			<b>Expert</br>(Whatsapp no: 7906667878)</b></p>
 		</div>
 	</footer>
 </body>
