--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number"></span>
+			<span class="number">73</span>
 		</div>
 	</div>
 
@@ -94,7 +94,7 @@
 					<td>06-10-17</td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>73</td>
 					<td>76</td>
 					<td></td>
 				</tr>
