--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number"></span>
+			<span class="number">62</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -93,7 +93,7 @@
 				<tr>
 					<td>06-10-17</td>
 					<td></td>
-					<td></td>
+					<td>62</td>
 					<td>73</td>
 					<td>76</td>
 					<td></td>
