--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number"></span>
+			<span class="number">79</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
@@ -92,7 +92,7 @@
 				</tr>
 				<tr>
 					<td>06-10-17</td>
-					<td></td>
+					<td>79</td>
 					<td>46</td>
 					<td>73</td>
 					<td>76</td>
