--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number"></span>
+			<span class="number">84</span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
@@ -96,7 +96,7 @@
 					<td>46</td>
 					<td>73</td>
 					<td>76</td>
-					<td></td>
+					<td>84</td>
 				</tr>
 				<tr>
 					<td>08-10-17</td>
