--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">79</span>
+			<span class="number"></span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">46</span>
+			<span class="number"></span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
-			<span class="number">84</span>
+			<span class="number"></span>
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">76</span>
+			<span class="number">97</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">73</span>
+			<span class="number"></span>
 		</div>
 	</div>
 
@@ -99,11 +99,11 @@
 					<td>84</td>
 				</tr>
 				<tr>
-					<td>08-10-17</td>
+					<td>07-10-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>97</td>
 					<td></td>
 				</tr>
 				<tr>
