--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number"></span>
+			<span class="number">95</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -117,7 +117,7 @@
 				<tr>
 					<td>09-10-17</td>
 					<td></td>
-					<td></td>
+					<td>95</td>
 					<td>67</td>
 					<td>25</td>
 					<td></td>
