--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number"></span>
+			<span class="number">81</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
@@ -116,7 +116,7 @@
 				</tr>
 				<tr>
 					<td>09-10-17</td>
-					<td></td>
+					<td>81</td>
 					<td>95</td>
 					<td>67</td>
 					<td>25</td>
