--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">81</span>
+			<span class="number"></span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">95</span>
+			<span class="number"></span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -29,11 +29,11 @@
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">25</span>
+			<span class="number">85</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">67</span>
+			<span class="number"></span>
 		</div>
 	</div>
 
