--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number"></span>
+			<span class="number">99</span>
 		</div>
 	</div>
 
@@ -126,7 +126,7 @@
 					<td>10-10-17</td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>99</td>
 					<td>85</td>
 					<td></td>
 				</tr>
