--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number"></span>
+			<span class="number">33</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -125,7 +125,7 @@
 				<tr>
 					<td>10-10-17</td>
 					<td></td>
-					<td></td>
+					<td>33</td>
 					<td>99</td>
 					<td>85</td>
 					<td></td>
