--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number"></span>
+			<span class="number">09</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
@@ -124,7 +124,7 @@
 				</tr>
 				<tr>
 					<td>10-10-17</td>
-					<td></td>
+					<td>09</td>
 					<td>33</td>
 					<td>99</td>
 					<td>85</td>
