--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">09</span>
+			<span class="number"></span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">33</span>
+			<span class="number"></span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">99</span>
+			<span class="number"></span>
 		</div>
 	</div>
 
