--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number"></span>
+			<span class="number">82</span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number"></span>
+			<span class="number">00</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number"></span>
+			<span class="number">91</span>
 		</div>
 	</div>
 
@@ -172,9 +172,9 @@
 				</tr>
 				<tr>
 					<td>16-10-17</td>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td>82</td>
+					<td>00</td>
+					<td>91</td>
 					<td>26</td>
 					<td></td>
 				</tr>
