--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 		<h2>TODAY RESULTS</h2>
 		<div class="result">
 			<span>DELHI-DARBAR</span>
-			<span class="number">82</span>
+			<span class="number"></span>
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">00</span>
+			<span class="number"></span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -29,11 +29,11 @@
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">26</span>
+			<span class="number">75</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">91</span>
+			<span class="number"></span>
 		</div>
 	</div>
 
@@ -176,14 +176,14 @@
 					<td>00</td>
 					<td>91</td>
 					<td>26</td>
-					<td></td>
+					<td>06</td>
 				</tr>
 				<tr>
 					<td>17-10-17</td>
 					<td></td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>75</td>
 					<td></td>
 				</tr>
 				<tr>
