--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number"></span>
+			<span class="number">64</span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -33,7 +33,7 @@
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number"></span>
+			<span class="number">49</span>
 		</div>
 	</div>
 
@@ -181,8 +181,8 @@
 				<tr>
 					<td>17-10-17</td>
 					<td></td>
-					<td></td>
-					<td></td>
+					<td>64</td>
+					<td>49</td>
 					<td>75</td>
 					<td></td>
 				</tr>
