--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="reverseresult">
 			<span>GAZIABAD</span>
-			<span class="number">64</span>
+			<span class="number"></span>
 		</div>
 		<div class="result">
 			<span>GALI</span>
@@ -29,11 +29,11 @@
 		</div>
 		<div class="reverseresult">
 			<span>DISAWAR</span>
-			<span class="number">75</span>
+			<span class="number">21</span>
 		</div>
 		<div class="result">
 			<span>FARIDABAD</span>
-			<span class="number">49</span>
+			<span class="number">92</span>
 		</div>
 	</div>
 
@@ -180,18 +180,18 @@
 				</tr>
 				<tr>
 					<td>17-10-17</td>
-					<td></td>
+					<td>19</td>
 					<td>64</td>
 					<td>49</td>
 					<td>75</td>
-					<td></td>
+					<td>83</td>
 				</tr>
 				<tr>
 					<td>18-10-17</td>
 					<td></td>
 					<td></td>
-					<td></td>
-					<td></td>
+					<td>92</td>
+					<td>21</td>
 					<td></td>
 				</tr>
 				<tr>
